MDEXP-628 - duplicates srs message